--- a/vite-project/src/pages/dashboard.html
+++ b/vite-project/src/pages/dashboard.html
@@ -1,158 +1,96 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiosque Online - Dashboard</title>
-    <link rel="stylesheet" href="../styles/dashboard.css">
+    <link rel="stylesheet" href="../styles/dashboard.css" />
+    <style>
+      /* Adicionado para ajustar o tamanho e alinhamento dos emojis */
+      .sidebar .logo,
+      .nav-link,
+      .user-button,
+      .stat-icon {
+        font-size: 24px; /* Tamanho base para emojis */
+      }
+      .nav-link {
+        display: flex;
+        align-items: center;
+        gap: 10px; /* Espaço entre o emoji e o texto */
+      }
+      .stat-icon {
+        font-size: 48px;
+      }
+      .logo {
+        font-size: 40px;
+      }
+    </style>
   </head>
   <body>
     <div id="app">
-      <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
           <div class="logo">
-            <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="3" y="4" width="18" height="12" rx="2" stroke="#4CAF50" stroke-width="2" fill="none"/>
-              <path d="M7 20h10" stroke="#4CAF50" stroke-width="2"/>
-              <path d="M9 16v4" stroke="#4CAF50" stroke-width="2"/>
-              <path d="M15 16v4" stroke="#4CAF50" stroke-width="2"/>
-              <circle cx="8" cy="8" r="1" fill="#4CAF50"/>
-              <path d="M10 7l2 2 4-4" stroke="#4CAF50" stroke-width="2" fill="none"/>
-            </svg>
+            🖥️
             <div class="logo-text">
               <h2>QUIOSQUE</h2>
               <h2>ONLINE</h2>
             </div>
           </div>
         </div>
-        
+
         <nav class="sidebar-nav">
           <ul class="nav-list">
             <li class="nav-item active">
-              <a href="#inicio" class="nav-link">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M3 9L12 2L21 9V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V9Z" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <polyline points="9,22 9,12 15,12 15,22" stroke="currentColor" stroke-width="2" fill="none"/>
-                </svg>
-                Início
-              </a>
+              <a href="#inicio" class="nav-link"> 🏠 Início </a>
             </li>
             <li class="nav-item">
-              <a href="#conteudos" class="nav-link">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect x="3" y="3" width="18" height="18" rx="2" ry="2" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <circle cx="8.5" cy="8.5" r="1.5" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <polyline points="21,15 16,10 5,21" stroke="currentColor" stroke-width="2" fill="none"/>
-                </svg>
-                Conteúdos
-              </a>
+              <a href="#conteudos" class="nav-link"> 🖼️ Conteúdos </a>
             </li>
             <li class="nav-item">
-              <a href="#grupos" class="nav-link">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect x="3" y="4" width="18" height="12" rx="2" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <path d="M7 20h10" stroke="currentColor" stroke-width="2"/>
-                  <path d="M9 16v4" stroke="currentColor" stroke-width="2"/>
-                  <path d="M15 16v4" stroke="currentColor" stroke-width="2"/>
-                </svg>
-                Grupo de Dispositivos
-              </a>
+              <a href="#grupos" class="nav-link"> 💻 Grupo de Dispositivos </a>
             </li>
             <li class="nav-item">
-              <a href="#regras" class="nav-link">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M14 2H6C4.89543 2 4 2.89543 4 4V20C4 21.1046 4.89543 22 6 22H18C19.1046 22 20 21.1046 20 20V8L14 2Z" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <polyline points="14,2 14,8 20,8" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <line x1="16" y1="13" x2="8" y2="13" stroke="currentColor" stroke-width="2"/>
-                  <line x1="16" y1="17" x2="8" y2="17" stroke="currentColor" stroke-width="2"/>
-                  <polyline points="10,9 9,9 8,9" stroke="currentColor" stroke-width="2" fill="none"/>
-                </svg>
-                Regras de Exibição
-              </a>
+              <a href="#regras" class="nav-link"> 📄 Regras de Exibição </a>
             </li>
             <li class="nav-item">
-              <a href="#configuracao" class="nav-link">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2" fill="none"/>
-                  <path d="M19.4 15C19.2669 15.3016 19.2272 15.6362 19.286 15.9606C19.3448 16.285 19.4995 16.5843 19.73 16.82L19.79 16.88C19.976 17.0657 20.1235 17.2863 20.2241 17.5291C20.3248 17.7719 20.3766 18.0322 20.3766 18.295C20.3766 18.5578 20.3248 18.8181 20.2241 19.0609C20.1235 19.3037 19.976 19.5243 19.79 19.71C19.6043 19.896 19.3837 20.0435 19.1409 20.1441C18.8981 20.2448 18.6378 20.2966 18.375 20.2966C18.1122 20.2966 17.8519 20.2448 17.6091 20.1441C17.3663 20.0435 17.1457 19.896 16.96 19.71L16.9 19.65C16.6643 19.4195 16.365 19.2648 16.0406 19.206C15.7162 19.1472 15.3816 19.1869 15.08 19.32C14.7842 19.4468 14.532 19.6572 14.3543 19.9255C14.1766 20.1938 14.0813 20.5082 14.08 20.83V21C14.08 21.5304 13.8693 22.0391 13.4942 22.4142C13.1191 22.7893 12.6104 23 12.08 23C11.5496 23 11.0409 22.7893 10.6658 22.4142C10.2907 22.0391 10.08 21.5304 10.08 21V20.91C10.0723 20.579 9.96512 20.2573 9.77251 19.9887C9.5799 19.7201 9.31074 19.5176 9 19.41C8.69838 19.2769 8.36381 19.2372 8.03941 19.296C7.71502 19.3548 7.41568 19.5095 7.18 19.74L7.12 19.8C6.93425 19.986 6.71368 20.1335 6.47088 20.2341C6.22808 20.3348 5.96783 20.3866 5.705 20.3866C5.44217 20.3866 5.18192 20.3348 4.93912 20.2341C4.69632 20.1335 4.47575 19.986 4.29 19.8C4.10405 19.6143 3.95653 19.3937 3.85588 19.1509C3.75523 18.9081 3.70343 18.6478 3.70343 18.385C3.70343 18.1222 3.75523 17.8619 3.85588 17.6191C3.95653 17.3763 4.10405 17.1557 4.29 16.97L4.35 16.91C4.58054 16.6743 4.73519 16.375 4.794 16.0506C4.85282 15.7262 4.81312 15.3916 4.68 15.09C4.55324 14.7942 4.34276 14.542 4.07447 14.3643C3.80618 14.1866 3.49179 14.0913 3.17 14.09H3C2.46957 14.09 1.96086 13.8793 1.58579 13.5042C1.21071 13.1291 1 12.6204 1 12.09C1 11.5596 1.21071 11.0509 1.58579 10.6758C1.96086 10.3007 2.46957 10.09 3 10.09H3.09C3.42099 10.0823 3.742 9.97512 4.01062 9.78251C4.27925 9.5899 4.48167 9.32074 4.59 9.01C4.72312 8.70838 4.76282 8.37381 4.704 8.04941C4.64519 7.72502 4.49054 7.42568 4.26 7.19L4.2 7.13C4.01405 6.94425 3.86653 6.72368 3.76588 6.48088C3.66523 6.23808 3.61343 5.97783 3.61343 5.715C3.61343 5.45217 3.66523 5.19192 3.76588 4.94912C3.86653 4.70632 4.01405 4.48575 4.2 4.3C4.38575 4.11405 4.60632 3.96653 4.84912 3.86588C5.09192 3.76523 5.35217 3.71343 5.615 3.71343C5.87783 3.71343 6.13808 3.76523 6.38088 3.86588C6.62368 3.96653 6.84425 4.11405 7.03 4.3L7.09 4.36C7.32568 4.59054 7.62502 4.74519 7.94941 4.804C8.27381 4.86282 8.60838 4.82312 8.91 4.69H9C9.29577 4.56324 9.54802 4.35276 9.72569 4.08447C9.90337 3.81618 9.99872 3.50179 10 3.18V3C10 2.46957 10.2107 1.96086 10.5858 1.58579C10.9609 1.21071 11.4696 1 12 1C12.5304 1 13.0391 1.21071 13.4142 1.58579C13.7893 1.96086 14 2.46957 14 3V3.09C14.0013 3.41179 14.0966 3.72618 14.2743 3.99447C14.452 4.26276 14.7042 4.47324 15 4.6C15.3016 4.73312 15.6362 4.77282 15.9606 4.714C16.285 4.65519 16.5843 4.50054 16.82 4.27L16.88 4.21C17.0657 4.02405 17.2863 3.87653 17.5291 3.77588C17.7719 3.67523 18.0322 3.62343 18.295 3.62343C18.5578 3.62343 18.8181 3.67523 19.0609 3.77588C19.3037 3.87653 19.5243 4.02405 19.71 4.21C19.896 4.39575 20.0435 4.61632 20.1441 4.85912C20.2448 5.10192 20.2966 5.36217 20.2966 5.625C20.2966 5.88783 20.2448 6.14808 20.1441 6.39088C20.0435 6.63368 19.896 6.85425 19.71 7.04L19.65 7.1C19.4195 7.33568 19.2648 7.63502 19.206 7.95941C19.1472 8.28381 19.1869 8.61838 19.32 8.92V9C19.4468 9.29577 19.6572 9.54802 19.9255 9.72569C20.1938 9.90337 20.5082 9.99872 20.83 10H21C21.5304 10 22.0391 10.2107 22.4142 10.5858C22.7893 10.9609 23 11.4696 23 12C23 12.5304 22.7893 13.0391 22.4142 13.4142C22.0391 13.7893 21.5304 14 21 14H20.91C20.5882 14.0013 20.2738 14.0966 20.0055 14.2743C19.7372 14.452 19.5268 14.7042 19.4 15Z" stroke="currentColor" stroke-width="2" fill="none"/>
-                </svg>
-                Configuração
-              </a>
+              <a href="#configuracao" class="nav-link"> ⚙️ Configuração </a>
             </li>
           </ul>
         </nav>
       </aside>
 
-      <!-- Main Content -->
       <main class="main-content">
-        <!-- Header -->
         <header class="header">
           <div class="header-content">
             <h1 class="page-title">Painel Administrativo</h1>
             <div class="user-menu">
-              <button class="user-button" id="userButton">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M20 21V19C20 17.9391 19.5786 16.9217 18.8284 16.1716C18.0783 15.4214 17.0609 15 16 15H8C6.93913 15 5.92172 15.4214 5.17157 16.1716C4.42143 16.9217 4 17.9391 4 19V21" stroke="currentColor" stroke-width="2"/>
-                  <circle cx="12" cy="7" r="4" stroke="currentColor" stroke-width="2"/>
-                </svg>
-              </button>
+              <button class="user-button" id="userButton">👤</button>
             </div>
           </div>
         </header>
 
-        <!-- Dashboard Content -->
         <div class="dashboard-content">
           <div class="stats-grid">
-            <!-- Conteúdos Ativos -->
             <div class="stat-card">
-              <div class="stat-icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect x="3" y="3" width="18" height="18" rx="2" ry="2" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                  <circle cx="8.5" cy="8.5" r="1.5" fill="#4CAF50"/>
-                  <polyline points="21,15 16,10 5,21" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                </svg>
-              </div>
+              <div class="stat-icon">🖼️</div>
               <div class="stat-content">
                 <div class="stat-number">0</div>
                 <div class="stat-label">Conteúdos Ativos</div>
               </div>
             </div>
 
-            <!-- Grupo de Dispositivos -->
             <div class="stat-card">
-              <div class="stat-icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <rect x="2" y="4" width="8" height="6" rx="1" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                  <rect x="14" y="4" width="8" height="6" rx="1" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                  <rect x="8" y="14" width="8" height="6" rx="1" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                  <line x1="6" y1="10" x2="6" y2="14" stroke="#4CAF50" stroke-width="2"/>
-                  <line x1="18" y1="10" x2="18" y2="14" stroke="#4CAF50" stroke-width="2"/>
-                  <line x1="6" y1="14" x2="12" y2="14" stroke="#4CAF50" stroke-width="2"/>
-                  <line x1="18" y1="14" x2="16" y2="14" stroke="#4CAF50" stroke-width="2"/>
-                </svg>
-              </div>
+              <div class="stat-icon">💻</div>
               <div class="stat-content">
                 <div class="stat-number">0</div>
                 <div class="stat-label">Grupo de Dispositivos</div>
               </div>
             </div>
 
-            <!-- Regras de Exibição -->
             <div class="stat-card">
-              <div class="stat-icon">
-                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M14 2H6C4.89543 2 4 2.89543 4 4V20C4 21.1046 4.89543 22 6 22H18C19.1046 22 20 21.1046 20 20V8L14 2Z" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                  <polyline points="14,2 14,8 20,8" stroke="#4CAF50" stroke-width="2" fill="none"/>
-                  <circle cx="8" cy="13" r="1" fill="#4CAF50"/>
-                  <circle cx="8" cy="16" r="1" fill="#4CAF50"/>
-                  <circle cx="8" cy="19" r="1" fill="#4CAF50"/>
-                  <line x1="12" y1="13" x2="16" y2="13" stroke="#4CAF50" stroke-width="2"/>
-                  <line x1="12" y1="16" x2="16" y2="16" stroke="#4CAF50" stroke-width="2"/>
-                  <line x1="12" y1="19" x2="16" y2="19" stroke="#4CAF50" stroke-width="2"/>
-                </svg>
-              </div>
+              <div class="stat-icon">📄</div>
               <div class="stat-content">
                 <div class="stat-number">0</div>
                 <div class="stat-label">Regras de Exibição</div>
@@ -160,7 +98,6 @@
             </div>
           </div>
 
-          <!-- Additional Content Area -->
           <div class="content-area">
             <div class="welcome-section">
               <h2>Bem-vindo ao Sistema de Sinalização Digital</h2>
